@@ -10,7 +10,6 @@ import java.util.Stack;
 import org.apache.log4j.Logger;
 
 import com.webobjects.eoaccess.EOAdaptorChannel;
-import com.webobjects.eoaccess.EOAttribute;
 import com.webobjects.eoaccess.EODatabaseContext;
 import com.webobjects.eoaccess.EOEntity;
 import com.webobjects.eoaccess.EOModelGroup;
@@ -87,7 +86,7 @@ public class ERXLongPrimaryKeyFactory {
 			if (log.isDebugEnabled()) {
 				log.debug("new pk value for "+ename+"("+((ERXModelGroup) EOModelGroup.defaultGroup()).entityCode(ename)+"), db value = "+pk+", new value = "+realPk);
 			}
-			pk = new Long(realPk);
+			pk = Long.valueOf(realPk);
 		}
 		if (encodeEntityInPkValue()) {
 			long l = pk.longValue();
@@ -104,7 +103,7 @@ public class ERXLongPrimaryKeyFactory {
 			if (log.isDebugEnabled()) {
 				log.debug("new pk value for "+ename+"("+((ERXModelGroup) EOModelGroup.defaultGroup()).entityCode(ename)+"), db value = "+pk+", new value = "+realPk);
 			}
-			pk = new Long(realPk);
+			pk = Long.valueOf(realPk);
 		}
 		return pk;
 	}
@@ -144,7 +143,7 @@ public class ERXLongPrimaryKeyFactory {
 
 	private int hostCode() {
 		if (hostCode == null) {
-			hostCode = new Integer(ERXSystem.getProperty(HOST_CODE_KEY));
+			hostCode = Integer.valueOf(ERXSystem.getProperty(HOST_CODE_KEY));
 		}
 		return hostCode.intValue();
 	}
@@ -197,23 +196,23 @@ public class ERXLongPrimaryKeyFactory {
 		}
 
 		Long pk = getNextPkValueForEntity(entityName);
-		String pkName = (String) entity.primaryKeyAttributeNames().objectAtIndex(0);
+		String pkName = entity.primaryKeyAttributeNames().objectAtIndex(0);
 		return new NSDictionary(new Object[] { pk}, new Object[] { pkName});
 	}
 
 	/**
 	 * returns a new primary key for the specified entity.
 	 * 
-	 * @param ename,
+	 * @param entityName
 	 *            the entity name for which this method should return a new
 	 *            primary key
-	 * @param count,
+	 * @param count
 	 *            the number of times the method should try to get a value from
 	 *            the database if something went wrong (a deadlock in the db for
 	 *            example -> high traffic with multiple instances)
-	 * @param increaseBy,
+	 * @param increasePkBy
 	 *            if > 1 then the value in the database is increased by this
-	 *            factor. This is usefull to 'get' 10000 pk values at once for
+	 *            factor. This is useful to 'get' 10000 pk values at once for
 	 *            caching. Removes a lot of db roundtrips.
 	 * @return a new pk values for the specified entity.
 	 */
@@ -267,7 +266,7 @@ public class ERXLongPrimaryKeyFactory {
 							con.createStatement().executeUpdate("insert into pk_table (eoentity_name, pk_value) values ('" + entityName + "', " + (pk+increasePkBy) + ")");
 						}
 						con.commit();
-						return new Long(pk);
+						return Long.valueOf(pk);
 					} catch(SQLException ex) {
 						String s = ex.getMessage().toLowerCase();
 						boolean creationError = (s.indexOf("error code 116") != -1); // frontbase?
@@ -304,14 +303,12 @@ public class ERXLongPrimaryKeyFactory {
 	 * first
 	 * 
 	 * @param ename
-	 * @param pk
-	 * @return
 	 */
 	private long maxIdFromTable(String ename) {
 		EOEntity entity = EOModelGroup.defaultGroup().entityNamed(ename);
 		if (entity == null) throw new NullPointerException("could not find an entity named " + ename);
 		String tableName = entity.externalName();
-		String colName = ((EOAttribute)entity.primaryKeyAttributes().lastObject()).columnName();
+		String colName = entity.primaryKeyAttributes().lastObject().columnName();
 		String sql = "select max(" + colName + ") from " + tableName;
 
 		ERXJDBCConnectionBroker broker = ERXJDBCConnectionBroker.connectionBrokerForEntityNamed(ename);
@@ -348,7 +345,7 @@ public class ERXLongPrimaryKeyFactory {
 	 * Returns a new integer based PkValue for the specified entity. If the
 	 * cache is empty it is refilled again.
 	 * 
-	 * @param ename,
+	 * @param ename
 	 *            the entity name for which this method should return a new
 	 *            primary key
 	 * 
@@ -372,7 +369,7 @@ public class ERXLongPrimaryKeyFactory {
 	 * specified entity name. If there is no Stack a new Stack object will be
 	 * created.
 	 * 
-	 * @param ename,
+	 * @param ename
 	 *            the name of the entity for which this method should return the
 	 *            Stack
 	 * @return the Stack with primary key values for the specified entity.
@@ -390,9 +387,9 @@ public class ERXLongPrimaryKeyFactory {
 	 * creates x primary key values for the specified entity and updates the
 	 * database, where x is the number specified in increaseBy
 	 * 
-	 * @param s,
+	 * @param s
 	 *            the stack into which the pk values should be inserted
-	 * @param ename,
+	 * @param ename
 	 *            the entity name for which the pk values should be generated
 	 */
 	private void fillPkCache(Stack s, String ename) {
@@ -400,7 +397,7 @@ public class ERXLongPrimaryKeyFactory {
 		long value = pkValueStart.longValue();
 		log.debug("filling pkCache for " + ename + ", starting at " + value);
 		for (int i = increaseBy(); i > 0;  i--) {
-			s.push(new Long(i + value));
+			s.push(Long.valueOf(i + value));
 		}
 	}
 
@@ -413,7 +410,7 @@ public class ERXLongPrimaryKeyFactory {
 	 */
 	private int increaseBy() {
 		if (increaseBy == null) {
-			increaseBy = new Integer(ERXProperties.intForKeyWithDefault("er.extensions.ERXLongPrimaryKeyFactory.increaseBy", 1000));
+			increaseBy = Integer.valueOf(ERXProperties.intForKeyWithDefault("er.extensions.ERXLongPrimaryKeyFactory.increaseBy", 1000));
 		}
 		return increaseBy.intValue();
 	}
