@@ -10,6 +10,8 @@ import java.io.StringReader;
 import java.lang.reflect.Method;
 import java.sql.SQLException;
 import java.sql.Types;
+import java.text.MessageFormat;
+import java.text.ParseException;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Map;
@@ -47,7 +49,6 @@ import com.webobjects.foundation.NSMutableDictionary;
 import com.webobjects.foundation.NSSelector;
 import com.webobjects.foundation.NSSet;
 import com.webobjects.foundation.NSTimestamp;
-import com.webobjects.foundation.NSValidation;
 import com.webobjects.foundation._NSUtilities;
 import com.webobjects.jdbcadaptor.JDBCAdaptor;
 import com.webobjects.jdbcadaptor.JDBCAdaptorException;
@@ -60,6 +61,7 @@ import er.extensions.eof.ERXModelGroup;
 import er.extensions.eof.qualifiers.ERXFullTextQualifier;
 import er.extensions.foundation.ERXProperties;
 import er.extensions.foundation.ERXStringUtilities;
+import er.extensions.validation.ERXValidationException;
 import er.extensions.validation.ERXValidationFactory;
 
 /**
@@ -109,8 +111,8 @@ public class ERXSQLHelper {
 	 * 
 	 * @param entities
 	 *            a NSArray containing the entities for which create table
-	 *            statements should be generated or null if all entitites in the
-	 *            model should be used.
+	 *            statements should be generated or <code>null</code> if all entities
+	 *            in the model should be used.
 	 * @param modelName
 	 *            the name of the EOModel
 	 * @param optionsCreate
@@ -126,7 +128,7 @@ public class ERXSQLHelper {
 	/**
 	 * Reimplementation that does not try to the shared objects. You should exit
 	 * soon after calling this, as it may or may not leave channels open. It is
-	 * simply to geenrate sql.
+	 * simply to generate sql.
 	 * 
 	 * @param model
 	 * @param coordinator
@@ -156,7 +158,7 @@ public class ERXSQLHelper {
 	 * 
 	 * @param entities
 	 *            a NSArray containing the entities for which create table
-	 *            statements should be generated or null if all entitites in the
+	 *            statements should be generated or null if all entities in the
 	 *            model should be used.
 	 * @param model
 	 *            the EOModel
@@ -243,7 +245,7 @@ public class ERXSQLHelper {
 		
 		NSMutableArray<EOEntity> foreignKeyEntities = entities.mutableClone();
 		for (EOEntity entity : entities) {
-			for (EORelationship relationship : (NSArray<EORelationship>)entity.relationships()) {
+			for (EORelationship relationship : entity.relationships()) {
 				if (!relationship.isToMany()) {
 					EOEntity destinationEntity = relationship.destinationEntity();
 					if (destinationEntity.model() != entity.model()) {
@@ -291,7 +293,7 @@ public class ERXSQLHelper {
 	 * 
 	 * @param entities
 	 *            a NSArray containing the entities for which create table
-	 *            statements should be generated or null if all entitites in the
+	 *            statements should be generated or null if all entities in the
 	 *            model should be used.
 	 * @param modelName
 	 *            the name of the EOModel
@@ -309,7 +311,7 @@ public class ERXSQLHelper {
 	 * 
 	 * @param entities
 	 *            a NSArray containing the entities for which create table
-	 *            statements should be generated or null if all entitites in the
+	 *            statements should be generated or null if all entities in the
 	 *            model should be used.
 	 * @param model
 	 *            the EOModel
@@ -365,7 +367,7 @@ public class ERXSQLHelper {
 	 * 
 	 * @param entities
 	 *            a NSArray containing the entities for which create table
-	 *            statements should be generated or null if all entitites in the
+	 *            statements should be generated or null if all entities in the
 	 *            model should be used.
 	 * @param databaseContext
 	 *            the databaseContext
@@ -530,7 +532,7 @@ public class ERXSQLHelper {
 	}
 
 	/**
-	 * Returns the last of attributes to fetch for a fetch spec. The entity is
+	 * Returns the list of attributes to fetch for a fetch spec. The entity is
 	 * passed in here because it has likely already been looked up for the
 	 * particular fetch spec.
 	 * 
@@ -548,7 +550,7 @@ public class ERXSQLHelper {
 		}
 		else {
 			NSMutableArray<EOAttribute> rawRowAttributes = new NSMutableArray<EOAttribute>();
-			for (String rawRowKeyPath : (NSArray<String>) fetchSpec.rawRowKeyPaths()) {
+			for (String rawRowKeyPath : fetchSpec.rawRowKeyPaths()) {
 				rawRowAttributes.addObject(entity.anyAttributeNamed(rawRowKeyPath));
 			}
 			attributes = rawRowAttributes.immutableClone();
@@ -640,7 +642,7 @@ public class ERXSQLHelper {
 		}
 		EOSQLExpression sqlExpr = sqlFactory.selectStatementForAttributes(attributes, false, spec, entity);
 		String sql = sqlExpr.statement();
-		if(spec.hints() != null && !spec.hints().isEmpty() && !(spec.hints().valueForKey(EODatabaseContext.CustomQueryExpressionHintKey) == null)) {
+		if (spec.hints() != null && !spec.hints().isEmpty() && spec.hints().valueForKey(EODatabaseContext.CustomQueryExpressionHintKey) != null) {
 			Object hint = spec.hints().valueForKey(EODatabaseContext.CustomQueryExpressionHintKey);
 			sql = customQueryExpressionHintAsString(hint);
 		}
@@ -688,11 +690,32 @@ public class ERXSQLHelper {
 	 * @return the generated read format
 	 */
 	public String readFormatForAggregateFunction(String functionName, String columnName, String aggregateName) {
-		StringBuffer sb = new StringBuffer();
+		return readFormatForAggregateFunction(functionName, columnName, aggregateName, false);
+	}
+	
+	/**
+	 * Returns the attribute read format for an aggregate function for a
+	 * particular column with a name.
+	 * 
+	 * @param functionName
+	 *            the aggregate function to generate
+	 * @param columnName
+	 *            the column name to aggregate on
+	 * @param aggregateName
+	 *            the name to assign to the aggregate result
+	 * @param usesDistinct
+	 *            <code>true</code> if function should be used on distinct values
+	 * @return the generated read format
+	 */
+	public String readFormatForAggregateFunction(String functionName, String columnName, String aggregateName, boolean usesDistinct) {
+		StringBuilder sb = new StringBuilder();
 		sb.append(functionName);
-		sb.append("(");
+		sb.append('(');
+		if (usesDistinct) {
+			sb.append("distinct ");
+		}
 		sb.append(columnName);
-		sb.append(")");
+		sb.append(')');
 		if (aggregateName != null) {
 			sb.append(" AS ");
 			sb.append(aggregateName);
@@ -1108,30 +1131,27 @@ public class ERXSQLHelper {
 		if (spec.hints() == null || spec.hints().isEmpty() || spec.hints().valueForKey(EODatabaseContext.CustomQueryExpressionHintKey) == null) {
 			// no hints
 			if (spec.fetchLimit() > 0 || spec.sortOrderings() != null) {
-				boolean usesDistinct=spec.usesDistinct();
+				boolean usesDistinct = spec.usesDistinct();
 				spec = new EOFetchSpecification(spec.entityName(), spec.qualifier(), null);
 				spec.setUsesDistinct(usesDistinct);
 			}
 
 			EOSQLExpression sqlExpression = sqlExpressionForFetchSpecification(ec, spec, 0, -1);
 			String statement = sqlExpression.statement();
-			int index = statement.toLowerCase().indexOf(" from ");
+			String listString = sqlExpression.listString();
 
 			String countExpression;
 			if (spec.usesDistinct()) {
-				NSArray primaryKeyAttributeNames = entity.primaryKeyAttributeNames();
+				NSArray<String> primaryKeyAttributeNames = entity.primaryKeyAttributeNames();
 				if (primaryKeyAttributeNames.count() > 1)
 					log.warn("Composite primary keys are currently unsupported in rowCountForFetchSpecification, when the spec uses distinct");
-				String pkAttributeName = (String) primaryKeyAttributeNames.lastObject();
+				String pkAttributeName = primaryKeyAttributeNames.lastObject();
 				String pkColumnName = entity.attributeNamed(pkAttributeName).columnName();
-				countExpression = "count(distinct " +
-						quoteColumnName("t0." + pkColumnName) 
-						+ ") ";
-			}
-			else {
+				countExpression = "count(distinct " + quoteColumnName("t0." + pkColumnName) + ") ";
+			} else {
 				countExpression = "count(*) ";
 			}
-			statement = (new StringBuilder()).append("select ").append(countExpression).append(statement.substring(index, statement.length())).toString();
+			statement = statement.replace(listString, countExpression);
 			sqlExpression.setStatement(statement);
 			sql = statement;
 			result = ERXEOAccessUtilities.rawRowsForSQLExpression(ec, model.name(), sqlExpression);
@@ -1247,7 +1267,7 @@ public class ERXSQLHelper {
 
 		int maxPerQuery = maximumElementPerInClause(e.entity());
 
-		// Need to wrap this SQL in parens if there are multiple grougps
+		// Need to wrap this SQL in parenthesis if there are multiple groups
 		if (valueArray.count() > maxPerQuery) {
 			sb.append(" ( ");
 		}
@@ -1267,7 +1287,7 @@ public class ERXSQLHelper {
 				// EOAttribute.adaptorValueByConvertingAttributeValue() doesn't
 				// actually return a suitable value
 				if (value instanceof ERXConstant.NumberConstant) {
-					value = new Long(((Number) value).longValue());
+					value = Long.valueOf(((Number) value).longValue());
 				}
 				else {
 					value = formatValueForAttribute(e, value, attribute, key);
@@ -1313,7 +1333,7 @@ public class ERXSQLHelper {
 		if (sql != null) {
 			char commandSeparatorChar = commandSeparatorChar();
 			Pattern commentPattern = commentPattern();
-			StringBuffer statementBuffer = new StringBuffer();
+			StringBuilder statementBuffer = new StringBuilder();
 			BufferedReader reader = new BufferedReader(new StringReader(sql));
 			boolean inQuotes = false;
 
@@ -1332,6 +1352,7 @@ public class ERXSQLHelper {
 					// Determine if the line ends inside a single quoted string
 					int length = nextLine.length();
 					char ch = 0;
+					char prev = 0;
 					for (int i = 0; i < length; i++) {
 						ch = nextLine.charAt(i);
 						// Determine if we are in a quoted string, but ignore escaped apostrophes, e.g. 'Mike\'s Code' 
@@ -1341,9 +1362,14 @@ public class ERXSQLHelper {
 						else if (ch == '\'') {
 							inQuotes = !inQuotes;
 						}
+						else if (ch == '-' && prev == '-' && !inQuotes) {
+							statementBuffer.deleteCharAt(statementBuffer.length() - 1);
+							break;
+						}
 						if (inQuotes || ch != commandSeparatorChar) {
 							statementBuffer.append(ch);
 						}
+						prev = ch;
 					}
 
 					// If we are not in a quoted string, either this is the end of the command or we need to 
@@ -1664,7 +1690,7 @@ public class ERXSQLHelper {
 		 * This method checks each foreign key constraint name and if it is
 		 * longer than 30 characters its replaced with a unique name.
 		 * 
-		 * @see createSchemaSQLForEntitiesInModelWithNameAndOptions
+		 * @see ERXSQLHelper#createSchemaSQLForEntitiesInModelWithNameAndOptions(NSArray, String, NSDictionary)
 		 */
 		@Override
 		public String createSchemaSQLForEntitiesInModelWithNameAndOptions(NSArray<EOEntity> entities, String modelName, NSDictionary optionsCreate) {
@@ -1816,6 +1842,7 @@ public class ERXSQLHelper {
 			return externalType;
 		}
 		
+		@Override
 		public boolean reassignExternalTypeForValueTypeOverride(EOAttribute attribute) {
 			return false;
 		}
@@ -1896,10 +1923,12 @@ public class ERXSQLHelper {
 			return sql != null && !sql.startsWith("--");
 		}
 
+		@Override
 		public int varcharLargeJDBCType() {
 			return Types.CLOB;
 		}
 
+		@Override
 		public int varcharLargeColumnWidth() {
 			return 0;
 		}
@@ -2015,6 +2044,7 @@ public class ERXSQLHelper {
 			return "ALTER TABLE \"" + tableName + "\" ADD CONSTRAINT \"" + indexName + "\" UNIQUE(\"" + new NSArray<String>(columnNames).componentsJoinedByString("\", \"") + "\") DEFERRABLE INITIALLY DEFERRED";
 		}
 
+		@Override
 		public String sqlForCreateIndex(String indexName, String tableName, ColumnIndex... columnIndexes) {
 			NSMutableArray<String> columnNames = columnNamesFromColumnIndexes(columnIndexes);
 			return "CREATE INDEX \""+indexName+"\" ON \""+tableName+"\" (\""+new NSArray<String>(columnNames).componentsJoinedByString("\", \"")+"\")";
@@ -2078,6 +2108,7 @@ public class ERXSQLHelper {
 		 * 
 		 * @return regex pattern that indicates this line is an SQL comment
 		 */
+		@Override
 		protected Pattern commentPattern() {
 			return Pattern.compile("^--");
 		}
@@ -2110,7 +2141,7 @@ public class ERXSQLHelper {
 		 * of elements in the IN is greater than 1,000.  For larger sizes, the correct number for this method to return seems to depend on the
 		 * number of rows in the tables.  1/5th of the table size may be a good place to start looking for the upper bound.
 		 * 
-		 * @see ERXSQLHelper#maximumElementPerInClause()
+		 * @see ERXSQLHelper#maximumElementPerInClause(EOEntity)
 		 * 
 		 * @param entity EOEntity that can be used to fine-tune the result
 		 * @return database specific limit, or or most efficient number, of elements in an IN clause in a statement
@@ -2234,7 +2265,14 @@ public class ERXSQLHelper {
 	}
 
 	public static class PostgresqlSQLHelper extends ERXSQLHelper {
+		/**
+		 * The exception state string for unique constraint exceptions.
+		 * 
+		 * @see <a href="http://www.postgresql.org/docs/9.1/static/errcodes-appendix.html">Error codes</a>
+		 */
+		public static final String UNIQUE_CONSTRAINT_EXCEPTION_STATE = "23505";
 
+		public static final String UNIQUE_CONSTRAINT_MESSAGE_FORMAT = "ERROR: duplicate key value violates unique constraint \"{0}\"\n  Detail: Key ({1})=({2}) already exists.";
 		/**
 		 * Overriden to prevent the external time types set in 
 		 * {@link #externalTypeForJDBCType(JDBCAdaptor, int)} from being reset.
@@ -2252,20 +2290,6 @@ public class ERXSQLHelper {
 			return "select NEXTVAL('" + sequenceName + "') as key"; 
 		}
 		
-		@Override
-		protected String formatValueForAttribute(EOSQLExpression expression, Object value, EOAttribute attribute, String key) {
-			// The Postgres Expression has a problem using bind variables so we
-			// have to get the formatted
-			// SQL string for a value instead. All Apple provided plugins must
-			// use the bind variables
-			// however. Frontbase can go either way
-			// MS: is expression always instanceof PostgresExpression for
-			// postgres?
-			// boolean isPostgres =
-			// e.getClass().getName().equals("com.webobjects.jdbcadaptor.PostgresqlExpression");
-			return expression.formatValueForAttribute(value, attribute);
-		}
-
 		@Override
 		public String limitExpressionForSQL(EOSQLExpression expression, EOFetchSpecification fetchSpecification, String sql, long start, long end) {
 			return sql + " LIMIT " + (end - start) + " OFFSET " + start;
@@ -2343,7 +2367,7 @@ public class ERXSQLHelper {
 		 * Creates unique index; stolen from the derby helper
 		 * 
 		 * @author cug - Jun 24, 2008
-		 * @see er.extensions.ERXSQLHelper#sqlForCreateUniqueIndex(java.lang.String, java.lang.String, er.extensions.ERXSQLHelper.ColumnIndex[])
+		 * @see ERXSQLHelper#sqlForCreateUniqueIndex(String, String, ColumnIndex...)
 		 */
 		@Override
 		public String sqlForCreateUniqueIndex(String indexName, String tableName, ColumnIndex... columnIndexes) {
@@ -2373,7 +2397,39 @@ public class ERXSQLHelper {
 		public int varcharLargeColumnWidth() {
 			return -1;
 		}
-
+		
+		@Override
+		public boolean handleDatabaseException(EODatabaseContext databaseContext, Throwable throwable) {
+			if (throwable instanceof EOGeneralAdaptorException) {
+				EOGeneralAdaptorException gae = (EOGeneralAdaptorException) throwable;
+				if (gae.userInfo() != null) {
+					EOAdaptorOperation failedOperation = (EOAdaptorOperation) gae.userInfo().objectForKey(EOAdaptorChannel.FailedAdaptorOperationKey);
+					if (failedOperation != null) {
+						Throwable t = failedOperation.exception();
+						if (t instanceof JDBCAdaptorException) {
+							JDBCAdaptorException jdbcEx = (JDBCAdaptorException) t;
+							SQLException sqlEx = jdbcEx.sqlException();
+							if (sqlEx != null && UNIQUE_CONSTRAINT_EXCEPTION_STATE.equals(sqlEx.getSQLState())) {
+								String message = sqlEx.getMessage();
+								MessageFormat format = new MessageFormat(UNIQUE_CONSTRAINT_MESSAGE_FORMAT);
+								try {
+									Object[] objs = format.parse(message);
+									String idx = (String) objs[0];
+									ERXValidationFactory factory = ERXValidationFactory.defaultFactory();
+									String method = "UniqueConstraintException." + idx;
+									ERXValidationException ex = factory.createCustomException(null, method);
+									databaseContext.rollbackChanges();
+									throw ex;
+								} catch (ParseException e) {
+									log.warn("Error parsing unique constraint exception message: " + message);
+								}
+							}
+						}
+					}
+				}
+			}
+			return false;
+		}
 	}
 	
 	public static class FirebirdSQLHelper extends ERXSQLHelper {
@@ -2428,7 +2484,7 @@ public class ERXSQLHelper {
 		
 		/** 
 		 * Creates unique index; stolen from the derby helper
-		 * @see er.extensions.ERXSQLHelper#sqlForCreateUniqueIndex(java.lang.String, java.lang.String, er.extensions.ERXSQLHelper.ColumnIndex[])
+		 * @see ERXSQLHelper#sqlForCreateUniqueIndex(String, String, ColumnIndex...)
 		 */
 		@Override
 		public String sqlForCreateUniqueIndex(String indexName, String tableName, ColumnIndex... columnIndexes) {
@@ -2458,6 +2514,7 @@ public class ERXSQLHelper {
 		 * 
 		 * @return regex pattern that indicates this line is an SQL comment
 		 */
+		@Override
 		protected Pattern commentPattern() {
 			return Pattern.compile("^--");
 		}
@@ -2600,6 +2657,7 @@ public class ERXSQLHelper {
 			return "dbupdater";
 		}
 		
+		@Override
 		public boolean reassignExternalTypeForValueTypeOverride(EOAttribute attribute) {
 			return false;
 		}
