@@ -21,12 +21,14 @@ import com.webobjects.foundation.NSDictionary;
 import com.webobjects.foundation.NSMutableArray;
 import com.webobjects.foundation.NSMutableDictionary;
 
-import er.extensions.appserver.ERXApplication;
-import er.extensions.appserver.ERXSession;
-import er.extensions.eof.ERXDatabaseContext;
 import er.extensions.eof.ERXEC;
 import er.extensions.eof.ERXObjectStoreCoordinator;
 import er.extensions.foundation.ERXProperties;
+import er.extensions.statistics.store.ERXDumbStatisticsStoreListener;
+import er.extensions.statistics.store.ERXEmptyRequestDescription;
+import er.extensions.statistics.store.ERXNormalRequestDescription;
+import er.extensions.statistics.store.IERXRequestDescription;
+import er.extensions.statistics.store.IERXStatisticsStoreListener;
 
 /**
  * Enhances the normal stats store with a bunch of useful things which get
@@ -47,7 +49,7 @@ import er.extensions.foundation.ERXProperties;
  * @property er.extensions.ERXStatisticsStore.milliSeconds.fatal defaults to 5 minutes
  *
  * @author ak
- * @author kieran (Oct 14, 2009) - minor changes to capture thread name in middle of the request (useful for {@link ERXSession#threadName()}
+ * @author kieran (Oct 14, 2009) - minor changes to capture thread name in middle of the request (useful for {@link er.extensions.appserver.ERXSession#threadName()}}
  */
 public class ERXStatisticsStore extends WOStatisticsStore {
 
@@ -59,7 +61,23 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 		return _timer;
 	}
 
-	/**
+    private final IERXStatisticsStoreListener listener;
+
+    public ERXStatisticsStore() {
+        listener = new ERXDumbStatisticsStoreListener();
+    }
+
+    /**
+     * Create a statistics store with a custom listener. For example this listener might
+     * notify an external system when a response is very slow in coming.
+     * 
+     * @param listener a customer listener to do something 'special' when requests are slow
+     */
+    public ERXStatisticsStore(IERXStatisticsStoreListener listener) {
+        this.listener = listener;
+    }
+
+    /**
 	 * Thread that checks each second for running requests and makes a snapshot
 	 * after a certain amount of time has expired.
 	 * 
@@ -68,9 +86,10 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 	 */
 	class StopWatchTimer implements Runnable {
 
-		long maximumRequestErrorTime;
-		long maximumRequestWarnTime;
-		long maximumRequestFatalTime;
+		long _maximumRequestErrorTime;
+		long _maximumRequestWarnTime;
+		long _maximumRequestFatalTime;
+		long _lastLog;
 
 		Map<Thread, Long> _requestThreads = new WeakHashMap<Thread, Long>();
 		Map<Thread, Map<Thread, StackTraceElement[]>> _warnTraces = Collections.synchronizedMap(new WeakHashMap<Thread, Map<Thread, StackTraceElement[]>>());
@@ -84,9 +103,9 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 			Thread timerThread = new Thread(this);
 			timerThread.setDaemon(true);
 			timerThread.start();
-			maximumRequestWarnTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.warn", 2000L);
-			maximumRequestErrorTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.error", 10000L);
-			maximumRequestFatalTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.fatal", 5 * 60 * 1000L);
+			_maximumRequestWarnTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.warn", 2000L);
+			_maximumRequestErrorTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.error", 10000L);
+			_maximumRequestFatalTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.fatal", 5 * 60 * 1000L);
 		}
 
 		private long time() {
@@ -102,6 +121,7 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 				if (hasTimerStarted()) {
 					requestTime = System.currentTimeMillis() - time();
 				}
+				
 				Thread currentThread = Thread.currentThread();
 				Map<Thread, StackTraceElement[]> traces = _fatalTraces.remove(currentThread);
 				Map<Thread, String> names = _fatalTracesNames.remove(currentThread);
@@ -113,20 +133,31 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 					traces = _warnTraces.remove(currentThread);
 					names = _warnTracesNames.remove(currentThread);
 				}
-				String trace = stringFromTraces(traces, names);
+				
 				synchronized (_requestThreads) {
 					_requestThreads.remove(Thread.currentThread());
 				}
-				if (requestTime > maximumRequestFatalTime) {
-					String requestDescription = aContext == null ? aString : descriptionForContext(aContext);
+				
+				// Don't get the traces string if we have already logged all
+				// of the stacks within the last 10s. All of this logging
+				// could just makes it worse for an application that is 
+				// already struggling.
+				String trace = " - (skipped stack traces)";
+				long currentTime = System.currentTimeMillis();
+				if (currentTime - _lastLog > 10000) {
+					trace = stringFromTracesAndNames(traces, names);
+					_lastLog = currentTime;
+				}
+			
+                IERXRequestDescription requestDescription = descriptionObjectForContext(aContext, aString);
+                listener.log(requestTime, requestDescription);
+				if (requestTime > _maximumRequestFatalTime) {
 					log.fatal("Request did take too long : " + requestTime + "ms request was: " + requestDescription + trace);
 				}
-				else if (requestTime > maximumRequestErrorTime) {
-					String requestDescription = aContext == null ? aString : descriptionForContext(aContext);
+				else if (requestTime > _maximumRequestErrorTime) {
 					log.error("Request did take too long : " + requestTime + "ms request was: " + requestDescription + trace);
 				}
-				else if (requestTime > maximumRequestWarnTime) {
-					String requestDescription = aContext == null ? aString : descriptionForContext(aContext);
+				else if (requestTime > _maximumRequestWarnTime) {
 					log.warn("Request did take too long : " + requestTime + "ms request was: " + requestDescription + trace);
 				}
 			}
@@ -136,7 +167,7 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 			}
 		}
 
-		private String stringFromTraces(Map<Thread, StackTraceElement[]> traces, Map<Thread, String> names) {
+		private String stringFromTracesAndNames(Map<Thread, StackTraceElement[]> traces, Map<Thread, String> names) {
 			String trace = null;
 			if (traces != null) {
 				String capturedThreadName = null;
@@ -150,7 +181,7 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 				sb.append("\nRequest Thread Name: ").append(capturedThreadName).append("\n\n");
 				for (Iterator iterator = traces.keySet().iterator(); iterator.hasNext();) {
 					Thread t = (Thread) iterator.next();
-					StackTraceElement stack[] = (StackTraceElement[]) traces.get(t);
+					StackTraceElement stack[] = traces.get(t);
 					String name = t.getName() != null ? t.getName() : "No name";
 					String groupName = t.getThreadGroup() != null ? t.getThreadGroup().getName() : "No group";
 
@@ -190,28 +221,34 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 		protected void startTimer() {
 			if (!hasTimerStarted()) {
 				synchronized (_requestThreads) {
-					_requestThreads.put(Thread.currentThread(), new Long(System.currentTimeMillis()));
+					_requestThreads.put(Thread.currentThread(), Long.valueOf(System.currentTimeMillis()));
 				}
 			}
 		}
 
-		public String descriptionForContext(WOContext aContext) {
-			try {
-				WOComponent component = aContext.page();
-				String componentName = component != null ? component.name() : "NoNameComponent";
-				String additionalInfo = "(no additional Info)";
-				WORequest request = aContext.request();
-				String requestHandler = request != null ? request.requestHandlerKey() : "NoRequestHandler";
-				if (!requestHandler.equals("wo")) {
-					additionalInfo = additionalInfo + aContext.request().uri();
-				}
-				return componentName + "-" + requestHandler + additionalInfo;
-			}
-			catch (RuntimeException e) {
-				log.error("Cannot get context description since received exception " + e, e);
-			}
-			return "Error-during-context-description";
+		public String descriptionForContext(WOContext aContext, String string) {
+			return descriptionObjectForContext(aContext, string).toString();
 		}
+
+        public IERXRequestDescription descriptionObjectForContext(WOContext aContext, String string) {
+            if (aContext != null) {
+                try {
+                    WOComponent component = aContext.page();
+                    String componentName = component != null ? component.name() : "NoNameComponent";
+                    String additionalInfo = "(no additional Info)";
+                    WORequest request = aContext.request();
+                    String requestHandler = request != null ? request.requestHandlerKey() : "NoRequestHandler";
+                    if (!requestHandler.equals("wo")) {
+                        additionalInfo = additionalInfo + aContext.request().uri();
+                    }
+                    return new ERXNormalRequestDescription(componentName, requestHandler, additionalInfo);
+                }
+                catch (RuntimeException e) {
+                    log.error("Cannot get context description since received exception " + e, e);
+                }
+            }
+            return new ERXEmptyRequestDescription(string);
+        }
 
 		public void run() {
 			Thread.currentThread().setName("ERXStopWatchTimer");
@@ -233,39 +270,48 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 	            requestThreads.putAll(_requestThreads);
 			}
 			if (!requestThreads.isEmpty()) {
-				for (Iterator iterator = requestThreads.keySet().iterator(); iterator.hasNext();) {
-					Thread thread = (Thread) iterator.next();
+                int deadlocksCount = 0;
+				Map<Thread, StackTraceElement[]> traces = null; 
+				for (Thread thread : requestThreads.keySet()) {
 					Long time = requestThreads.get(thread);
 					if (time != null) {
 						time = System.currentTimeMillis() - time;
-						if (time > maximumRequestWarnTime/2 && _warnTraces.get(thread) == null) {
-							Map traces = Thread.getAllStackTraces();
-							Map names = getCurrentThreadNames(traces.keySet());
+						if (time > _maximumRequestWarnTime/2 && _warnTraces.get(thread) == null) {
+							if(traces == null) {
+								traces = Thread.getAllStackTraces();
+							}
+							Map<Thread, String> names = getCurrentThreadNames(traces.keySet());
 							_warnTraces.put(thread, traces);
 						}
-						if (time > maximumRequestErrorTime/2 && _errorTraces.get(thread) == null) {
-							Map traces = Thread.getAllStackTraces();
-							Map names = getCurrentThreadNames(traces.keySet());
+						if (time > _maximumRequestErrorTime/2 && _errorTraces.get(thread) == null) {
+							if(traces == null) {
+								traces = Thread.getAllStackTraces();
+							}
+							Map<Thread, String> names = getCurrentThreadNames(traces.keySet());
 							_errorTraces.put(thread, traces);
 							_errorTracesNames.put(thread, names);
 						}
-						if (time > maximumRequestFatalTime && _fatalTraces.get(thread) == null) {
-							Map traces = Thread.getAllStackTraces();
-							Map names = getCurrentThreadNames(traces.keySet());
+						if (time > _maximumRequestFatalTime && _fatalTraces.get(thread) == null) {
+							if(traces == null) {
+								traces = Thread.getAllStackTraces();
+							}
+							Map<Thread, String> names = getCurrentThreadNames(traces.keySet());
 							_fatalTraces.put(thread, traces);
 							_fatalTracesNames.put(thread, names);
 							String message = "Request is taking too long, possible deadlock: " + time + " ms ";
-							message += stringFromTraces(traces, names);
+							message += stringFromTracesAndNames(traces, names);
 							message += "EC info:\n" + ERXEC.outstandingLockDescription();
 							message += "OSC info:\n" + ERXObjectStoreCoordinator.outstandingLockDescription();
 							log.fatal(message);
+                            deadlocksCount++;
 						}
 					}
 				}
+                listener.deadlock(deadlocksCount);
 			}
 		}
 
-		private Map getCurrentThreadNames(Set<Thread> keySet) {
+		private Map<Thread, String> getCurrentThreadNames(Set<Thread> keySet) {
 			Map names = new HashMap<Thread, String>();
 			for (Thread thread : keySet) {
 				names.put(thread, thread.getName());
@@ -275,23 +321,23 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 
 	}
 
+	@Override
 	public NSDictionary statistics() {
 		NSDictionary stats = super.statistics();
-		if (ERXApplication.isWO54()) {
-			NSMutableDictionary fixed = stats.mutableClone();
-			for (Enumeration enumerator = stats.keyEnumerator(); enumerator.hasMoreElements();) {
-				Object key = enumerator.nextElement();
-				Object value = stats.objectForKey(key);
-				fixed.setObjectForKey(fix(value), key);
-			}
-			stats = fixed;
+		NSMutableDictionary fixed = stats.mutableClone();
+		for (Enumeration enumerator = stats.keyEnumerator(); enumerator.hasMoreElements();) {
+			Object key = enumerator.nextElement();
+			Object value = stats.objectForKey(key);
+			fixed.setObjectForKey(fix(value), key);
 		}
+		stats = fixed;
 		return stats;
 		
 	}
 
-	protected NSMutableArray sessions = new NSMutableArray<WOSession>();
+	protected NSMutableArray<WOSession> sessions = new NSMutableArray<WOSession>();
 
+	@Override
 	protected void _applicationCreatedSession(WOSession wosession) {
 		synchronized (this) {
 			sessions.addObject(wosession);
@@ -299,6 +345,7 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 		}
 	}
 
+	@Override
 	protected void _sessionTerminating(WOSession wosession) {
 		synchronized (this) {
 			super._sessionTerminating(wosession);
@@ -306,7 +353,7 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 		}
 	}
 
-	public NSArray activeSession() {
+	public NSArray<WOSession> activeSession() {
 		return sessions;
 	}
 
@@ -318,31 +365,37 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 		timer().endTimer(null, aString);
 	}
 
+	@Override
 	public void applicationWillHandleComponentActionRequest() {
 		startTimer();
 		super.applicationWillHandleComponentActionRequest();
 	}
 
+	@Override
 	public void applicationDidHandleComponentActionRequestWithPageNamed(String aString) {
 		endTimer(aString);
 		super.applicationDidHandleComponentActionRequestWithPageNamed(aString);
 	}
 
+	@Override
 	public void applicationWillHandleDirectActionRequest() {
 		startTimer();
 		super.applicationWillHandleDirectActionRequest();
 	}
 
+	@Override
 	public void applicationDidHandleDirectActionRequestWithActionNamed(String aString) {
 		endTimer(aString);
 		super.applicationDidHandleDirectActionRequestWithActionNamed(aString);
 	}
 
+	@Override
 	public void applicationWillHandleWebServiceRequest() {
 		startTimer();
 		super.applicationWillHandleWebServiceRequest();
 	}
 
+	@Override
 	public void applicationDidHandleWebServiceRequestWithActionNamed(String aString) {
 		endTimer(aString);
 		super.applicationDidHandleWebServiceRequestWithActionNamed(aString);
